# oxynium

./: .gitattributes  .gitignore  Cargo.toml  README.md  out.asm  run  rustfmt.toml  test.asm
.github/workflows/: macos.yml  rust.yml  tests.yml  ubuntu.yml
examples/: add.asm  c_hello.s  cpp_empty.asm  cpp_hello.cpp  cpp_hello.s  cpp_hello_2.asm  hello.asm  hello2.asm  hello_world.asm
scripts/: install  uninstall
spec/: arith.sh  basic_arith.sh  bif_calls.sh  boolean.sh  boolean_logic.sh  class.sh  comments.sh  edge.sh  functions.sh  global_consts.sh  if.sh  int_comparisons.sh  loops.sh  numeric.sh  performance.sh  string.sh  struct.sh  types.sh  variables.sh  while_loop.sh
spec/classes/: composition.sh  field_access.sh  instantiation.sh  methods.sh  operator_overrides.sh  primitives.sh  static_methods.sh
spec/examples/: interpreter.oxy
spec/functions/: declarations.sh  default_arguments.sh  external_fn.sh  fn_main.sh  recursion.sh  return.sh
spec/project_euler/: 1.sh  2.sh  3.sh
spec/std/: Bool.sh  Char.sh  Int.sh  Str.sh  input.sh
src/: args.rs  ast.rs  compile.rs  context.rs  error.rs  lexer.rs  log.rs  main.rs  parser.rs  position.rs  post_process.rs  symbol_path.rs  symbols.rs  target.rs  token.rs  util.rs
src/ast/: arith_bin_op_node.rs  arith_unary_op_node.rs  bin_op.rs  bin_op_node.rs  bool.rs  break.rs  break_node.rs  char.rs  context.rs  (+57 more)
std/: constants.asm  prelude.oxy  std-data.asm  std.asm  std.doxy  std.oxy  std.res
test/: alpine.Dockerfile  arch.Dockerfile  debian.Dockerfile  macos.Dockerfile  test_full_concurrent.py  ubuntu.Dockerfile
(+168 files in other folders)
