[package]
name = "oxynium"
version = "0.2.2"
edition = "2021"
repository = "https://github.com/revers3ntropy/oxynium"
readme = "README.md"
authors = ["josephcoppin@gmail.com"]
description = """
Oxynium compiler
"""
publish = false

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
regex = "1"
phf = { version = "0.11", features = ["macros"] }