[package]
name = "oxynium"
version = "0.2.4"
edition = "2021"
repository = "https://github.com/revers3ntropy/oxynium"
readme = "README.md"
authors = ["joseph.coppin+oxy@gmail.com"]
description = "The Oxynium Compiler"
publish = false

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
regex = "1"
phf = { version = "0.11", features = ["macros"] }