[package]
name = "oxynium"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/revers3ntropy/oxynium"
readme = "README.md"
authors = ["joseph.coppin+oxy@gmail.com"]
description = "The Oxynium Compiler"
publish = false

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
regex = "1"
phf = { version = "0.11", features = ["macros"] }
shellexpand = "3.1.0"
include_dir = { version = "0.7.4", features = ["glob"] }
